# syncwerk-server-librpc

./: .gitignore  .travis.yml  INSTALL  Makefile.am  README.markdown  autogen.sh  configure.ac  librpcsyncwerk.pc.in
debian/: changelog  changelog.template  control  copyright.template  rules
demo/: Makefile.am  demo-async-client.c  pyrpcsyncwerk-demo-client.py  rpcsyncwerk-demo-client.c  rpcsyncwerk-demo-server.c
lib/: Makefile.am  rpcsyncwerk-client.c  rpcsyncwerk-client.h  rpcsyncwerk-codegen.py  rpcsyncwerk-named-pipe-transport.c  rpcsyncwerk-named-pipe-transport.h  rpcsyncwerk-server.c  rpcsyncwerk-server.h  rpcsyncwerk-utils.c  rpcsyncwerk-utils.h  rpcsyncwerk.h
pyrpcsyncwerk/: Makefile.am
tests/: Makefile.am  rpcsyncwerk.c
